--- a/source/第二章 词汇表.rst
+++ b/source/第二章 词汇表.rst
@@ -5,23 +5,23 @@
 ------------
 .. glossary::
 
-	peer/节点
-		均指组成区块链网络的对等实体。
+	节点
+		即peer，均指组成区块链网络的对等实体。一般有三种状态：出块节点，背书节点和普通节点。
 
 	节点view
 		通过gossip协议收敛的在网节点列表和状态。
 
 	账本
-		在比特币中仅记录了各账户币的出入，称为账本。
+		是一种在网络成员之间共享、复制和同步的数据库。
 
 	账户
 		用户的登录id，在轻钱包的代理模式下，用户账户将密钥对委托给代理服务管理。
 
 	密钥
-		分为私钥和公钥。
+		非对称密钥加密技术采用一对匹配的密钥进行加密、解密，具有两个密钥，一个是公钥一个是私钥，它们具有这种性质：每把密钥执行一种对数据的单向处理，每把的功能恰恰与另一把相反，一把用于加密时，则另一把就用于解密。用公钥加密的文件只能用私钥解密，而私钥加密的文件只能用公钥解密。 公共密钥是由其主人加以公开的，而私人密钥必须保密存放。
 
 	证书
-		密钥对采用符合jdk keystore 定义的工具生成，从公钥衍生出证书，证书可加入到受信任证书列表jks，通过部署为akka remote security 的TLS所认可。
+		密钥对采用符合jdk keystore 定义的工具生成，从公钥衍生出证书，证书可加入到受信任证书列表。
 
 	区块
 		区块是一组有序的交易集合，在通道中经过哈希加密后与前序区块连接。
