--- a/source/第二章 词汇表.rst
+++ b/source/第二章 词汇表.rst
@@ -1,61 +1,50 @@
 词汇表
 ==============
 
-术语
+2.1 术语
 ------------
-.. glossary::
 
-	节点
-		即peer，均指组成区块链网络的对等实体。一般有三种状态：出块节点，背书节点和普通节点。
+	**(1) 节点:** 即peer，均指组成区块链网络的对等实体。一般有三种状态：出块节点，背书节点和普通节点。
+	
+	**(2) 节点view:** 通过gossip协议收敛的在网节点列表和状态。
+	
+	**(3) 账本:** 是一种在网络成员之间共享、复制和同步的数据库。
+	
+	**(4) 账户:** 用户的登录id，在轻钱包的代理模式下，用户账户将密钥对委托给代理服务管理。
 
-	节点view
-		通过gossip协议收敛的在网节点列表和状态。
+	**(5) 密钥:** 非对称密钥加密技术采用一对匹配的密钥进行加密、解密，具有两个密钥，一个是公钥一个是私钥，
+	它们具有这种性质：每把密钥执行一种对数据的单向处理，每把的功能恰恰与另一把相反，一把用于加密时，
+	则另一把就用于解密。用公钥加密的文件只能用私钥解密，而私钥加密的文件只能用公钥解密。 
+	公共密钥是由其主人加以公开的，而私人密钥必须保密存放。
+		
 
-	账本
-		是一种在网络成员之间共享、复制和同步的数据库。
+	**(6) 证书:** 密钥对采用符合jdk keystore 定义的工具生成，从公钥衍生出证书，证书可加入到受信任证书列表。
 
-	账户
-		用户的登录id，在轻钱包的代理模式下，用户账户将密钥对委托给代理服务管理。
+	**(7) 区块** 记录一段时间内的交易内容，由共识机制确定生成。
 
-	密钥
-		非对称密钥加密技术采用一对匹配的密钥进行加密、解密，具有两个密钥，一个是公钥一个是私钥，它们具有这种性质：每把密钥执行一种对数据的单向处理，每把的功能恰恰与另一把相反，一把用于加密时，则另一把就用于解密。用公钥加密的文件只能用私钥解密，而私钥加密的文件只能用公钥解密。 公共密钥是由其主人加以公开的，而私人密钥必须保密存放。
+	**(8) 链:** 将区块按照时间顺序串联。
 
-	证书
-		密钥对采用符合jdk keystore 定义的工具生成，从公钥衍生出证书，证书可加入到受信任证书列表。
+	**(9) 链码:** 即chaincode，用于修改资产的交易指令。
 
-	区块
-		区块是一组有序的交易集合，在通道中经过哈希加密后与前序区块连接。
+	**(10) 背书:** 即Endorsement，验证检查出块节点发送的预出块的合法性，如果合法对其进行背书。
 
-	链
-		交易区块经过“哈希连接”结构化的交易日志。
+	**(11) 背书策略:** 即Endorsement policy，可指定对于某一chaincode，可以对交易背书的最小背书节点数或者最小背书节点百分比。
+	背书策略由背书节点基于应用程序和对抵御不良行为的期望水平来组织管理。
+		
+	**(12) 交易:** 导致账本状态改变的一个操作，不限于转账交易。
+		
+	**(13) 创世区块:** 即Genesis Block，是初始化区块链网络的配置区块，也是链上的第一个区块，其高度为1。
+		
+	**(14) 调用:** 用于调用deploy的chaincode内的函数，其结构由一个函数和一个参数数组构成。
+	invoke就是一个交易proposal，然后执行模块化的流程（背书、共识、 验证、 提交）。
+		
 
-	链码
-		用于修改资产的交易指令。
-
-	背书
-		即Endorsement， 是指一个peer执行一个交易并返回YES-NO给生成交易proposal的client app 的过程。chaincode具有相应的endorsement policies，其中指定了endorsing peer。
-
-	背书策略
-		背书策略（Endorsement policy）定义了依赖于特定chaincode执行交易的channel上的peer和响应结果（endorsements）的必要组合条件（即返回Yes或No的条件）。
-		Endorsement policy可指定对于某一chaincode，可以对交易背书的最小背书节点数或者最小背书节点百分比。
-		背书策略由背书节点基于应用程序和对抵御不良行为的期望水平来组织管理。在install和deploy Chaincode（deploy tx）时需要指定背书策略。
-
-	交易
-		Chaincode的invoke或deploy操作。
-
-	创世区块
-		创世区块（Genesis Block）是初始化区块链网络或channel的配置区块，也是链上的第一个区块，其高度为1。
-
-	调用
-		用于调用deploy的chaincode内的函数，其结构由一个函数和一个参数数组构成。invoke就是一个交易proposal，然后执行模块化的流程（背书、共识、 验证、 提交）。
-
-
-约定
+2.2 约定
 --------------
-.. glossary::
-	智能合约
-		通过一系列的约定达成某种共识
-	共识
-		是贯穿整个交易流程的广义术语，其用于产生一个对于排序的同意书和确认构造区块的交易集的正确性。
 
-返回 :ref:`index`
+	**(1) 智能合约:** 指一种计算机协议，这类协议一旦制定和部署就能实现自我执行（self-executing）和自我验证（self-verifing），
+	并且不再需要人为的干预。聚焦到区块链技术中时，智能合约指在区块链系统中已编码的、可自动运行的业务逻辑。
+		
+	
+	**(2) 共识机制:** 分布式系统中多个节点之间对某个状态达成一致结果，建立信任的过程，根据区块链系统的类型以及应用场景可选取不同的共识机制。
+	共识包括输入共识（本次区块的内容）和输出共识（区块中交易执行之后的链的状态），建立在全网节点状态View和节点沟通机制的基础上。	
