--- a/source/第五章 协议规范.rst
+++ b/source/第五章 协议规范.rst
@@ -1,8 +1,9 @@
 协议规范
 ===============
 
-协议主流程
+5.1 协议主流程
 -------------------
+
 .. image:: ./images/chapter5/ProtocolMainFlow.png
    :height: 1109
    :width: 1465
@@ -24,8 +25,9 @@
    :scale: 50
    :alt: 系统各组成部分参与主流程的相互关系
 
-协议载体
+5.2 协议载体
 -----------------
+
 **消息的传播通过四种载体：**
 
 * 代理节点提供RestAPI供UI调用，用于提交交易；（1）
@@ -33,8 +35,9 @@
 * Akka Cluster提供Pub／Sub机制，用于广播交易和区块（2、5）
 * Akka Remote提供P2P消息传播，用与背书交互（3、4）
 
-协议调度过程
+5.3 协议调度过程
 --------------------
+
 .. image:: ./images/chapter5/pic3.png
    :scale: 50
    :alt: 协议调度过程
