--- a/source/第七章 数据存储.rst
+++ b/source/第七章 数据存储.rst
@@ -1,35 +1,40 @@
 数据存储
 ===============
 
-存储机制
+7.1 存储机制
 --------------
+
 本系统存储采用文件+LevelDb构成，文件用来存放区块以及链信息，LevelDB存放索引信息以及WorldState信息。
 
-系统创建及初始化
+7.1.1 系统创建及初始化
+++++++++++++++++++++++++
+
+	1. 多实例存储机制，主要支持交易的与执行
+	2. 单实例存储机制，主要支持数据的持久化与API接口
+
+7.1.2 存储内容
+++++++++++++++++++
+
+	1. LevelDB存储索引
+	2. File System存储区块
+
+7.1.3 Merkle计算
 +++++++++++++++++++
-1. 多实例存储机制，主要支持交易的与执行
-2. 单实例存储机制，主要支持数据的持久化与API接口
 
-存储内容
-+++++++++
-1. LevelDB存储索引
-2. File System存储区块
+	1. Merkle计算的原则采用增量方式，目的是减少内存和CPU的占用。
+	2. Merkle计算方法是：首先计算当前块的Worldstate的Hash256，然后连接上一个块计算的Merkle值，再次计算Hash256，即为当前的Merkle值。
 
-Merkle计算
-+++++++++++++++
-1. Merkle计算的原则采用增量方式，目的是减少内存和CPU的占用。
-2. Merkle计算方法是：首先计算当前块的Worldstate的Hash256，然后连接上一个块计算的Merkle值，再次计算Hash256，即为当前的Merkle值。
+7.1.4 存储功能
+++++++++++++++++++
 
-存储功能
-++++++++++
-1. 单实例的LevelDB操作需要支持事务机制，包含提交与回滚
-2. 支持区块的读写
-3. 支持WorldState的读写
-4. 支持Merkle的计算
-5. 支持外部检索
-6. 支持读写集的校验
+	1. 单实例的LevelDB操作需要支持事务机制，包含提交与回滚
+	2. 支持区块的读写
+	3. 支持WorldState的读写
+	4. 支持Merkle的计算
+	5. 支持外部检索
+	6. 支持读写集的校验
 
-存储结构
+7.2 存储结构
 --------------
 
 .. image:: ./images/chapter7/pic1.png
@@ -38,12 +43,13 @@ Merkle计算
    :width: 1499
    :alt: 存储结构图
 
-存储类
+7.3 存储类
 --------------
 
-LevelDB
-+++++++++
-接口类，描述公共对外访问的全局方法，包括以下方法：
+7.3.1 LevelDB
++++++++++++++++++
+
+	接口类，描述公共对外访问的全局方法，包括以下方法：
 
 	1. 从系统获取某个键对应的值::
 	
@@ -89,17 +95,19 @@ LevelDB
 	
 		def  GetComputeMerkle4String:String
 	
-AbstractLevelDB
-+++++++++++++++++
-该类实现公共方法，实现的方法有：toString，toLong，toInt，PrintlnHashMap，GetComputeMerkle，getComputMerkle4String。
+7.3.2 AbstractLevelDB
++++++++++++++++++++++++++
+
+	该类实现公共方法，实现的方法有：toString，toLong，toInt，PrintlnHashMap，GetComputeMerkle，getComputMerkle4String。
 	
 	该类新增以下两个方法，这两个方法属于保护类型，外部不需要调用：
 	
 	1. protected  def	ReloadMerkle  初始化时装载上一个块的Merkle值
   	2. protected  def	PutWorldStateToMerkle(key:String,value:Array[Byte]) 系统WorldState改变时自动修改Merle值
 
-IDataAccess
-+++++++++++++++
+7.3.3 IDataAccess
+++++++++++++++++++++++
+
 该类实现LevelDB数据库的操作，并且添加外部操作定义。
 	数据库操作方法有：
 	
@@ -221,12 +229,14 @@ IDataAccess
 		
 			def getMaxFileNo():Int
 		
-ImpDataAccess
-+++++++++++++++++
+7.3.4 ImpDataAccess
+++++++++++++++++++++++++
+
 		实现IDataAccess定义的外部操作方法。
 		
-ImpDataPreload
+7.3.5 ImpDataPreload
 +++++++++++++++++++++
+
 	实现LevelDB数据的快照（内存数据）操作方法，增加背书时针对读写指令集的验证以及多个实例的管理。
 	
 	增加的背书验证方法：
@@ -244,8 +254,9 @@ ImpDataPreload
 	
 	MultiDBMgr存储所有的动态预执行操作实例，所有实例被存储在map结构中，该类会自动管理这些实例，如果没有被Free，MultiDBMgr会自动Free超过一分钟没有操作的实例。
 
-BlockHelp
-++++++++++++
+7.3.6 BlockHelp
+++++++++++++++++++
+
 该类属于单实例类，负责文件系统操作，读写区块信息。
 
 	1. 获取当前区块文件长度::
