修正部分问题的答案

--- a/source/第十二章 故障排除和常见问题.rst
+++ b/source/第十二章 故障排除和常见问题.rst
@@ -9,20 +9,18 @@
 
 	**问题：多少个网络中的节点需要对交易进行背书？**
 	
-	**答案：** 需要对交易进行背书操作的节点数量由背书策略决定，背书策略在链码部署的时候指定。
+	**答案：** 需要对交易进行背书操作的节点数量由背书策略决定，背书节点需要的个数不是由链码指定，repchain启动时的配置文件指定的。
 
 	**问题：应用需要连接到所有节点吗？**
 	
-	**答案：** 应用只需要连接到链码对应的背书策略所要求的足够多的节点。
+	**答案：** 应用同一时刻只会连接一个联盟节点。
 
 12.1.2 安全和权限控制
 +++++++++++++++++++++++
 
 	**问题：我如何能够保证数据的隐私？**
 	
-	**答案：** 在调用链码前对数据进行哈希操作或者加密。如果对数据进行哈希操作，需要提供获取原数据的方式。
-	如果对数据进行加密，需要提供获取密钥的方式。可以通过链码中的访问控制逻辑限制数据访问权限，
-	只有机构中特定的角色可以访问。
+	**答案：** 数据先hash操作，然后由私钥进行签名发送到repchain。
 	
 
 12.1.3 应用端编程模型
@@ -34,7 +32,7 @@
 
 	**问题：如何查询账本数据？**
 
-	**答案：** 通过链码可以通过键值查询数据。可以对键值进行范围查询，复合主键可以允许查询出部分键值相同的值。	
+	**答案：** 通过链码可以通过键值查询数据。可以对键值进行范围查询，复合主键可以允许查询出部分键值相同的值。
 
 12.1.4 链码
 +++++++++++++++++
