--- a/source/第二章 词汇表.rst
+++ b/source/第二章 词汇表.rst
@@ -20,7 +20,7 @@
 
 	**(6) 证书:** 密钥对采用符合jdk keystore 定义的工具生成，从公钥衍生出证书，证书可加入到受信任证书列表。
 
-	**(7) 区块** 记录一段时间内的交易内容，由共识机制确定生成。
+	**(7) 区块:** 记录一段时间内的交易内容，由共识机制确定生成。
 
 	**(8) 链:** 将区块按照时间顺序串联。
 
