更换7.2的图片，优化文档段落布局

--- a/source/第七章 数据存储.rst
+++ b/source/第七章 数据存储.rst
@@ -4,7 +4,7 @@
 7.1 存储机制
 --------------
 
-本系统存储采用文件+LevelDb构成，文件用来存放区块以及链信息，LevelDB存放索引信息以及WorldState信息。
+	本系统存储采用文件+LevelDb构成，文件用来存放区块以及链信息，LevelDB存放索引信息以及WorldState信息。
 
 7.1.1 系统创建及初始化
 ++++++++++++++++++++++++
@@ -37,11 +37,11 @@
 7.2 存储结构
 --------------
 
-.. image:: ./images/chapter7/pic1.png
-   :scale: 50
-   :height: 1094
-   :width: 1499
-   :alt: 存储结构图
+	.. image:: ./images/chapter7/pic7_2_1.png
+	   :scale: 50
+	   :height: 1094
+	   :width: 1499
+	   :alt: 存储结构图
 
 7.3 存储类
 --------------
@@ -108,7 +108,8 @@
 7.3.3 IDataAccess
 ++++++++++++++++++++++
 
-该类实现LevelDB数据库的操作，并且添加外部操作定义。
+	该类实现LevelDB数据库的操作，并且添加外部操作定义。
+	
 	数据库操作方法有：
 	
 	1. 实现系统名称的获取::
@@ -232,7 +233,7 @@
 7.3.4 ImpDataAccess
 ++++++++++++++++++++++++
 
-		实现IDataAccess定义的外部操作方法。
+	实现IDataAccess定义的外部操作方法。
 		
 7.3.5 ImpDataPreload
 +++++++++++++++++++++
@@ -257,7 +258,7 @@
 7.3.6 BlockHelp
 ++++++++++++++++++
 
-该类属于单实例类，负责文件系统操作，读写区块信息。
+	该类属于单实例类，负责文件系统操作，读写区块信息。
 
 	1. 获取当前区块文件长度::
 	
