添加实时图工具

--- a/source/第四章 快速入门.rst
+++ b/source/第四章 快速入门.rst
@@ -102,7 +102,7 @@
 	repChain提供日志可视化展示。可视化的目的在于以直观的方式将系统的实时状态和日志信息展示给人工用户。
 	可视化模块从系统中收集运行日志，本模块负责向其他模块提出日志需求。
 
-4.3.1 检查点
+4.3.1 可视化
 +++++++++++++++
 
 .. image:: ./images/chapter4/4.3.1.png
@@ -264,6 +264,14 @@
 4.8.1 实时图
 ++++++++++++++++
 	实时图显示了每个节点peer之间的动态关系，发生交易、背书，出块等动作，可以实时的显示出每一步流程，使得节点之间的资产转移可以直观的进行显示。		访问网址： http://localhost:8081/web/g1.html
+	
+
+	.. image:: ./images/chapter4/实时图.png
+           :scale: 50
+           :height: 1153
+           :width: 1387
+           :alt: 消息流
+
 	
 4.8.2 Swagger-UI
 ++++++++++++++++
