peer节点表述问题

--- a/source/第四章 快速入门.rst
+++ b/source/第四章 快速入门.rst
@@ -122,8 +122,7 @@
 	**以何种图示化形式展示、回放这些日志？**
 
 	——图形展示形式如上图所示：大圆代表cluster，每个peer位于圆周上均匀分布；圆周内圆圈代表topic，
-	内圆面积表示topic规模；peer颜色代表不同类型（候选人、代理人、展示peer）。Peer对内圆topic的指向代表订阅关系；
-	peer向topic发送消息，用延时箭头表示；peer之间发送消息，用延时箭头表示；
+	内圆面积表示topic规模；Peer颜色代表代表不同类型的节点，比如候选节点、代理节点和展示节点。Peer向topic的指向代表订阅关系，在向topic发送消息时用延时线条表示，同时peer之间发送消息时也用延时线条表示。
 	
 	由于集群中Peer数目可以比较大（1000+），可以从出块开始，只显示随机抽中的代表节点、发出交易的代理节点、动态展示交易打包过程，
 	背书共识过程、出块广播过程
