--- a/source/第六章 系统与共识.rst
+++ b/source/第六章 系统与共识.rst
@@ -5,7 +5,7 @@
 -----------
 
 	本系统采用Akka-Actor做为模块实现基本组件，实现了系统创建、初始化、运行，进行全网共识并出块。
-	同时，对沙箱预执行模块和存储木块的调用，完成整体的区块链系统功能。
+	同时，对沙箱预执行模块和存储模块的调用，完成整体的区块链系统功能。
 	主要分为系统创建及初始化、系统应用模块构建、区块数据同步、共识出块四大部分。
 
 6.1.1系统创建及初始化
@@ -28,7 +28,7 @@
 +++++++++++++++++++
 
 	1. 系统入网稳定后，进行区块链数据同步。
-	2. 先同步，在交易。
+	2. 先同步，再交易。
 
 6.1.4 共识
 +++++++++++++++
