--- a/source/第二章 词汇表.rst
+++ b/source/第二章 词汇表.rst
@@ -10,7 +10,7 @@
 	
 	**(3) 账本:** 是一种在网络成员之间共享、复制和同步的数据库。
 	
-	**(4) 账户:** 用户的登录id，每个账户都由一对钥匙定义，一个私钥和一个公钥。。
+	**(4) 账户:** 用户的登录id，每个账户都由一对钥匙定义，一个私钥和一个公钥。
 
 	**(5) 密钥:** 非对称密钥加密技术采用一对匹配的密钥进行加密、解密，具有两个密钥，一个是公钥一个是私钥，
 	它们具有这种性质：每把密钥执行一种对数据的单向处理，每把的功能恰恰与另一把相反，一把用于加密时，
