--- a/source/第十二章 故障排除和常见问题.rst
+++ b/source/第十二章 故障排除和常见问题.rst
@@ -1,7 +1,7 @@
 故障排除和常见问题
 ========================
 
-12.1. repChain答疑
+12.1. RepChain答疑
 -----------------------
 
 12.1.1 背书
@@ -9,7 +9,7 @@
 
 	**问题：多少个网络中的节点需要对交易进行背书？**
 	
-	**答案：** 需要对交易进行背书操作的节点数量由背书策略决定，背书节点需要的个数不是由链码指定，repchain启动时的配置文件指定的。
+	**答案：** 需要对交易进行背书操作的节点数量由背书策略决定，背书节点需要的个数不是由链码指定，RepChain启动时的配置文件指定的。
 
 	**问题：应用需要连接到所有节点吗？**
 	
@@ -20,7 +20,7 @@
 
 	**问题：我如何能够保证数据的隐私？**
 	
-	**答案：** 数据先hash操作，然后由私钥进行签名发送到repchain。
+	**答案：** 数据先hash操作，然后由私钥进行签名发送到RepChain。
 	
 
 12.1.3 应用端编程模型
@@ -37,7 +37,7 @@
 12.1.4 链码
 +++++++++++++++++
 
-	**问题：repChain是否支持智能合约逻辑？**
+	**问题：RepChain是否支持智能合约逻辑？**
 	
 	**答案：** 是的，链码是部署在网络中的程序代码，通过共识流程被链的验证者共同执行并验证。开发者能使用链码来开发商业合同、资产定义和集体管理的去中心化应用。
 
