--- a/source/第四章 快速入门.rst
+++ b/source/第四章 快速入门.rst
@@ -99,7 +99,7 @@
 4.3 查看日志
 -----------------
 
-	repChain提供日志可视化展示。可视化的目的在于以直观的方式将系统的实时状态和日志信息展示给人工用户。
+	RepChain提供日志可视化展示。可视化的目的在于以直观的方式将系统的实时状态和日志信息展示给人工用户。
 	可视化模块从系统中收集运行日志，本模块负责向其他模块提出日志需求。
 
 4.3.1 可视化
@@ -141,7 +141,7 @@
 	   
 	   system {
 		  //api是否开启
-		  //如果是单机多节点测试模式（Repchain，则选择0，默认节点1会开启）
+		  //如果是单机多节点测试模式（RepChain，则选择0，默认节点1会开启）
 		  ws_enable = 1//api 0,不开启;1,开启
 		  
 		  //交易生产方式
@@ -252,11 +252,11 @@
 	   
 	    //组网是进行布置节点信息,组网时进行开启cluster
 		//种子节点
-		seed-nodes = ["akka.ssl.tcp://Repchain@192.168.2.88:8082",
-					"akka.ssl.tcp://Repchain@192.168.2.65:8082",
-					"akka.ssl.tcp://Repchain@192.168.2.27:8082",
-					"akka.ssl.tcp://Repchain@192.168.2.30:8082"]
-					#"akka.tcp://repChain@192.168.1.17:64426"]
+		seed-nodes = ["akka.ssl.tcp://RepChain@192.168.2.88:8082",
+					"akka.ssl.tcp://RepChain@192.168.2.65:8082",
+					"akka.ssl.tcp://RepChain@192.168.2.27:8082",
+					"akka.ssl.tcp://RepChain@192.168.2.30:8082"]
+					#"akka.tcp://RepChain@192.168.1.17:64426"]
 		}
 		
 4.8 开发工具
@@ -275,7 +275,7 @@
 
 	有以下几个topic：
 	
-	repChain：统计交易节点的个数；
+	RepChain：统计交易节点的个数；
 	
 	Transaction：节点间发生交易请求；
 	
